[project]
name = "jp-imports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
    "censusforge>=0.6.1",
    "comtradeapicall>=1.3.0",
    "duckdb>=1.5.0",
    "jp-tools>=0.5.8",
    "polars>=1.39.0",
]

[project.scripts]
jp-imports = "jp_imports:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
