[project]
name = "jp-imports"
version = "1.6.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
  "censusforge>=0.6.1",
  "comtradeapicall>=1.3.0",
  "duckdb>=1.5.0",
  "jp-tools>=0.5.8",
  "pandas>=3.0.1",
  "polars>=1.39.0",
  "pr-imports>=0.2.1",
  "pyarrow>=23.0.1",
]

[project.scripts]
jp-imports = "jp_imports:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "kaleido>=1.3.0",
    "pnglatex>=1.1",
    "pre-commit>=4.5.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
    "pytest>=9.0.3",
]
